# ErlangAoT

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
erl_aotc/: Cargo.toml
erl_aotc/src/: aotc_main.rs  codegen.rs  erl_module.rs  erl_types.rs  erlang_term.lalrpop  erlang_term.rs  k_module.rs  kernel.rs  kernel_eterm.rs  lib.rs  ll_types.rs
erl_aotc/src/kernel/: expr.rs  mod.rs  parse.rs
erl_aotc_parser/: Cargo.toml
erl_aotc_parser/src/: .gitignore  erlang_term.lalrpop  lexer.rs  lib.rs  position.rs  token.rs
erl_runtime/: Cargo.toml  README.md
erl_runtime/src/: lib.rs  runtime.rs
erl_shared/: Cargo.toml
erl_shared/src/: fterm.rs  lib.rs  types.rs
experiment/: .gitignore  Makefile  mochijson.kernel.term  mochijson2.kernel.term  to_kern.escript
src/: main.rs
